# finviz-screener

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  plan.md  pyproject.toml  state.db
.github/workflows/: ci.yml  pages.yml  scan.yml
src/finviz_screener/: __main__.py  analyzer.py  api.py  charts.py  cli.py  config.py  db.py  diff.py  exporter.py  models.py  notify.py  pipeline.py  scraper.py
tests/: test_analyzer.py  test_charts.py  test_config.py  test_db.py  test_diff.py  test_exporter.py  test_notify.py  test_pipeline.py  test_scraper.py
tests/fixtures/: config_test.yaml
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte
web/src/lib/: SignalsByScreener.svelte  api.ts  format.ts
web/src/routes/: LatestRun.svelte  RunDetail.svelte  RunsList.svelte
